cmake_minimum_required(VERSION 3.7)
project(task_1)
find_package(OpenCV REQUIRED)
set(opencv_include /usr/local/include/opencv4)
set(armor_include .)
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
include_directories(${opencv_include} ${armor_include})
link_directories(/usr/local/lib)
add_executable(Armor main.cpp Armor.cpp)
target_link_libraries(Armor ${OpenCV_LIBS})
